@@ -4,6 +4,7 @@
 - Feature: [#11013] Ctrl+C copies input dialog text to clipboard.
 - Fix: [#475] Water sides drawn incorrectly (original bug).
 - Fix: [#6123, #7907, #9472, #11028] Cannot build some track designs with 4 stations (original bug).
+- Fix: [#6238] Invalid tile elem iteration in Guest::UpdateUsingBin
 - Fix: [#7094] Back wall edge texture in water missing.
 - Fix: [#9719] Hacked walls in RCT1 saves are imported incorrectly. 
 - Fix: [#10928] File browser's date column is too narrow.
